# projet-iot

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/: renovate.json5
.github/renovate/: kubernetes.json5  kustomization.json5  labels.json5
.github/workflows/: docker-build-bridge.yaml  docker-build-events.yaml  docker-build-vehicle.yaml  docker-build.yaml  kubernetes-lint.yaml  pluto.yaml  renovate-lint.yaml
agent/: Dockerfile.bridge  Dockerfile.events  Dockerfile.vehicle  MQTT_to_influxdb.py  amqp_debug.py  event.old.py  event.py  events.py  main.py  vehicle.py  write_to_influxdb.py
k8s/: kustomization.yaml
k8s/app/agent/: bridge-deployment.yaml  deployment.yaml  kustomization.yaml  pvc.yaml
k8s/app/grafana/: grafana.yaml  httproute.yaml  kustomization.yaml  secrets.yaml
k8s/app/influxdb/: influxdb.yaml  kustomization.yaml  secret.yaml  secrets.yaml
k8s/app/mosquitto/: config.yaml  kustomization.yaml  mosquitto.yaml
k8s/app/rabbitmq/: kustomization.yaml  rabbitmq.yaml  secrets.yaml
k8s/app/telegraf/: kustomization.yaml  secrets.yaml  telegraf.yaml
